--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,6 +10,9 @@ body {
     color: #2E666B;
     margin: 0px;
 }
+.headptag{
+    text-align: center;
+}
 
 .footer {
     background-color: #2E666B;
