--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %>
     <h1>Blog Website</h1>
-    <p>Welcome ! Here you can Blog your daily activity</p>
+    <p class="headptag">Welcome ! Here you can Blog your daily activity</p>
     <div class="content">
 
         <div>
